Fixed the previous error, everything was messed up with the useStates and updating everytime a new city was chosen. Still not sure about the api calls not working. Fixed a bug where the weather widget wouldnt change colors based on the temp. Next step is to make it look like there is a carousel of panels behind the one in focus. after that, the task is to make a spinner appear for the loading of new cities

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ a:hover {
 }
 #citypic {
 	max-width: 99%;
-	height: fit-content;
+	max-height: 420px;
 
 	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
 	backdrop-filter: blur(10.5px);
